Fixing hero padding and titles for custom post types and overflowing images in sponsors widget

--- a/src/components/_sponsors.scss
+++ b/src/components/_sponsors.scss
@@ -41,7 +41,7 @@
 		img {
 
 			max-height: 10em;
-			max-width: 10em;
+			// max-width: 10em;
 
 		}
 
